[refactor] Fix chat spacing

--- a/AWS_Website/www_static/css/app.css
+++ b/AWS_Website/www_static/css/app.css
@@ -49,4 +49,5 @@
   width: 40%;
   float: right;
   overflow-y: scroll;
+  margin-right: 7px;
 }
